fix spacing issue

--- a/saa/index.css
+++ b/saa/index.css
@@ -79,5 +79,5 @@ strong {
 }
 
 .body {
-	padding-top: 200px;
+	padding-top: 260px;
 }
